--- a/meta/jade/index.jade
+++ b/meta/jade/index.jade
@@ -6,6 +6,7 @@ html
 		link(rel="stylesheet",type="text/css",href="../css/common.css")
 		link(rel="stylesheet",type="text/css",href="../css/index.css")
 		script(src="../js/js.js")
+		script(src="../js/js.js")
 		body
 			div#mask.hide
 				div.login.hide
