--- a/event/css/style.css
+++ b/event/css/style.css
@@ -9,7 +9,7 @@
 -----------------------------------------------------------------------------------------*/
 
 body {
-	font-family: 'Hind', sans-serif;
+	font-family: '微软雅黑', sans-serif;
 	font-size: 17px;
 	font-weight: lighter;
 	line-height: 1.5;
