--- a/css/impress-demo.css
+++ b/css/impress-demo.css
@@ -32,7 +32,14 @@ table {
 
 em{font-style: italic;}
 
-
+.clear{
+	zoom:1;
+}
+.clear:after{
+	display: block;
+	content: "";
+	clear: both;
+}
 body{background: rgb(239,239,239);font-family: "agency fb";}
 .wrap{width: 1000px;margin: 0px auto;overflow: hidden;}
 a{text-decoration: none;}
