--- a/css/impress-demo.css
+++ b/css/impress-demo.css
@@ -1,24 +1,4 @@
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-}
-
-article, aside, details, figcaption, figure,
+body,h1,h2,h3,h4,h5,p,dl,dd,ul,ol,form,input,textarea,th,td,select { margin:0; padding:0; font-size: 12px;}
 body {
     line-height: 1; 
 }
@@ -30,7 +10,7 @@ table {
     border-spacing: 0;
 }
 
-em{font-style: italic;}
+
 
 .clear{
 	zoom:1;
@@ -40,7 +20,8 @@ em{font-style: italic;}
 	content: "";
 	clear: both;
 }
-body{background: rgb(239,239,239);font-family: "agency fb";}
+body i{font-style: normal;}
+body{background: rgb(239,239,239);}
 .wrap{width: 1000px;margin: 0px auto;overflow: hidden;}
 a{text-decoration: none;}
 #head{width: 1000px;height: 200px;margin: 0px auto;}
